--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     </head>
     <body>
         <div>test</div>
+        <div>test</div>
+        <div>test 2</div>
         <script src="javascript.js"></script>
     </body>
 </html>
